Archive2/e0/669a5990c6fa00/output
main.cpp: In function 'bool decodeHex(InputIt, InputIt, OutputIt)':
main.cpp:24:10: error: 'hi' was not declared in this scope
     if (!hi)
          ^
